src/objects/Zonda_User__c.object
<CustomObject>
    <description>MG_Zonda User</description>
    <fields>
        <fullName>Accounting_to_BCC__c</fullName>
        <defaultValue>&quot;zondaaccounting@meyersresearchllc.com&quot;</defaultValue>
        <label>Accounting to BCC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>App Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zonda Users</relationshipLabel>
        <relationshipName>Zonda_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Login_Date_Time_Z__c</fullName>
        <formula>Last_Login_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Login Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date_Time__c</fullName>
        <label>Last Login Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Welcome_Message_Scheduled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Welcome Message Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newly_Created__c</fullName>
        <formula>If(LEFT(TEXT(CreatedDate),16)=LEFT(TEXT(LastModifiedDate),16),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Newly Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRO_Welcome_Message_Sent__c</fullName>
        <label>PRO Welcome Message Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Password Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password_Sent_Date__c</fullName>
        <inlineHelpText>This is the date time that the reset password notification was sent.</inlineHelpText>
        <label>Date Password Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Plain_Text_Password__c</fullName>
        <label>Plain Text Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email_Automated2__c</fullName>
        <label>RSD Email Automated 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSD_Email_Automated__c</fullName>
        <label>RSD Email Automated</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <formula>Zonda_User_Group__r.RSD_Email__c +&apos;;&apos;+ Contact__r.Owner.Email</formula>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Password__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This box will be unchecked after the user has updated his or her password</inlineHelpText>
        <label>Reset Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <formula>Zonda_User_Group__r.Role_s__c</formula>
        <label>Role(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Based_Workflow_datetime__c</fullName>
        <description>This field is used in the welcome message time based workflows to shorten the amount of time of the time based workflow.
0.03800 -- will fire in 05 min
0.03455 -- will fire in 10 min
0.03109 -- will fire in 15 min</description>
        <formula>CreatedDate - 0.03109</formula>
        <label>Time Based Workflow datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Group_read_only__c</fullName>
        <description>This field is used to pass the Zonda User Group name to the Contact</description>
        <formula>Zonda_User_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>If you do not enter an email address SF will use the email address from the contact.</inlineHelpText>
        <label>Username</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zonda_App_Version__c</fullName>
        <formula>App_Version__c</formula>
        <label>Zonda App Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zonda Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonda_User_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is an internal field - used for look up and coverage association</inlineHelpText>
        <label>Zonda User Group</label>
        <referenceTo>Zonda_User_Group__c</referenceTo>
        <relationshipLabel>Zonda Users</relationshipLabel>
        <relationshipName>Zonda_Users</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zonda_User_Id__c</fullName>
        <label>Zonda User Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_RSD_email__c</fullName>
        <label>test RSD email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Zonda User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Username__c</columns>
        <columns>Zonda_User_Group__c</columns>
        <columns>App_Version__c</columns>
        <columns>Last_Login_Date_Time_Z__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZU-{00000}</displayFormat>
        <label>Zonda User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zonda Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zonda_Pro_Requires_User_Group_Access</fullName>
        <active>true</active>
        <errorConditionFormula>Zonda_Pro__c = TRUE &amp;&amp;  Zonda_User_Group__r.Zonda_Pro__c = FALSE</errorConditionFormula>
        <errorMessage>This User&apos;s Group does not have Zonda Pro Access, so you cannot select the Zonda Pro checkbox</errorMessage>
    </validationRules>
</CustomObject>